--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: More about what it does (maybe more than one line).
 License: GPL (>= 2)
 Depends: R (>= 4.1.0)
 Imports:
-    cli
+    cli,
+    dplyr
 Suggests: 
     testthat (>= 3.0.0),
     knitr,
@@ -19,3 +20,4 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
