--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(available_indicators)
 export(estimate_indicators)
 import(cli)
+import(sf)
 importFrom(dplyr,bind_rows)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
