we can estimate indicators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,10 @@ export(estimate_indicators)
 import(cli)
 import(sf)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
