--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,6 +11,7 @@ reference:
 - title: Indicator estimation
   desc: Functions to estimate forest indicators
 - contents:
+  - show_information
   - estimate_indicators
 - title: Example datasets
   desc: Datasets provided as examples for indicator estimation
