dominant tree height and diameter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(stats,sd)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
