--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,12 +18,12 @@ Imports:
     cli,
     sf,
     dplyr,
-    tibble,
-    IFNallometry
+    tibble
 Suggests: 
     testthat (>= 3.0.0),
     knitr,
-    rmarkdown
+    rmarkdown,
+    IFNallometry
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
