--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,7 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0),
     knitr,
-    rmarkdown,
-    IFNallometry
+    rmarkdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
