--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,3 +24,5 @@ reference:
   - variable_definition
   - indicator_definition
   - additional_parameters
+- title: Data wrapper functions
+  - fordyn2forestindicators
