--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(available_indicators)
 export(estimate_indicators)
+export(medfate2forestindicators)
 export(show_information)
 import(cli)
 import(sf)
